--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,35 +1,51 @@
-@import './base.css';
+/********************************************
+Importacion de las fuentes desde googles
+********************************************/
+@import url('https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;700&display=swap');
 
-#app {
-  max-width: 1280px;
+/********************************************
+Colores bases sobre todos los estilos
+********************************************/
+:root {
+  --primary-100:#2E8B57;
+  --primary-200:#61bc84;
+  --primary-300:#c6ffe6;
+  --accent-100:#8FBC8F;
+  --accent-200:#345e37;
+  --text-100:#FFFFFF;
+  --text-200:#e0e0e0;
+  --bg-100:#1E1E1E;
+  --bg-200:#2d2d2d;
+  --bg-300:#454545;
+}
+
+/********************************************
+Configuracion base sobre todos los body
+********************************************/
+body {
+  font-family: 'Rubik', sans-serif;
   margin: 0 auto;
-  padding: 2rem;
-  font-weight: normal;
+  width: 100%;
 }
 
-a,
-.green {
-  text-decoration: none;
-  color: hsla(160, 100%, 37%, 1);
-  transition: 0.4s;
-  padding: 3px;
-}
-
-@media (hover: hover) {
-  a:hover {
-    background-color: hsla(160, 100%, 37%, 0.2);
+/********************************************
+Configuracion base sobre las animaciones
+********************************************/
+@keyframes fadeInUp {
+  from {
+    opacity: 0;
+    transform: translateY(20px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
   }
 }
 
-@media (min-width: 1024px) {
-  body {
-    display: flex;
-    place-items: center;
-  }
+.fade-enter-active, .fade-leave-active {
+  transition: opacity 1s ease-in-out;
+}
 
-  #app {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    padding: 0 2rem;
-  }
+.fade-enter-from, .fade-leave-to {
+  opacity: 0;
 }
