--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -31,7 +31,7 @@ html {
 }
 
 body {
-  width: 100%;
+  min-width: 100%;
   margin: 0 auto;
   font-family: 'Rubik', sans-serif;
   background: var(--bg-100);
