--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -20,6 +20,8 @@ Colores bases sobre todos los estilos
     
   --h1-font: 4.5rem;
   --h2-font: 2.9rem;
+  --h3-font: 2rem;
+  --h4-font: 1.5rem;
   --p-font: 1.2rem;
 }
 
