--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -22,7 +22,8 @@ Colores bases sobre todos los estilos
   --h2-font: 2.9rem;
   --h3-font: 2rem;
   --h4-font: 1.5rem;
-  --p-font: 1.2rem;
+  --p-font: 1.3rem;
+  --mini-font: 1rem;
 }
 
 /********************************************
