--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -35,6 +35,17 @@ body {
   background: linear-gradient(to top, var(--bg-300), var(--bg-100));
 }
 
+.page {
+  min-height: 100dvh;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
+
+.page-content {
+  flex: 1 0 auto;
+}
+
 /********************************************
 Configuracion base sobre las animaciones
 ********************************************/
