--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -17,6 +17,7 @@ Colores bases sobre todos los estilos
   --bg-100:#151931;
   --bg-200:#252841;
   --bg-300:#3d3f5b;
+  --form-no-valid:#dc3545;
 }
 
 /********************************************
